More WIP in the new tree type logic