@@ -50,7 +50,7 @@ private Object drainLock=new Object();
       firstPage=OggPage.create(sourceStream);
       position+=firstPage.getTotalLength();
       LogicalOggStreamImpl los=new LogicalOggStreamImpl(this, firstPage.getStreamSerialNumber());
-      logicalStreams.put(new Integer(firstPage.getStreamSerialNumber()), los);
+      logicalStreams.put(Integer.valueOf(firstPage.getStreamSerialNumber()), los);
       los.checkFormat(firstPage);
    }
 
@@ -91,7 +91,7 @@ private Object drainLock=new Object();
    }
 
    private LogicalOggStream getLogicalStream(int serialNumber) {
-      return (LogicalOggStream)logicalStreams.get(new Integer(serialNumber));
+      return (LogicalOggStream)logicalStreams.get(Integer.valueOf(serialNumber));
    }
 
    public void setTime(long granulePosition) throws IOException {
