@@ -57,7 +57,7 @@ public class FileStream implements PhysicalOggStream {
       int pageNumber=0;
       try {
          while(true) {
-            po.add(new Long(this.source.getFilePointer()));
+            po.add(Long.valueOf(this.source.getFilePointer()));
 
             // skip data if pageNumber>0
             OggPage op=getNextPage(pageNumber>0);
@@ -68,7 +68,7 @@ public class FileStream implements PhysicalOggStream {
             LogicalOggStreamImpl los=(LogicalOggStreamImpl)getLogicalStream(op.getStreamSerialNumber());
             if(los==null) {
                los=new LogicalOggStreamImpl(this, op.getStreamSerialNumber());
-               logicalStreams.put(new Integer(op.getStreamSerialNumber()), los);
+               logicalStreams.put(Integer.valueOf(op.getStreamSerialNumber()), los);
             }
 
             if(pageNumber==0) {
@@ -128,7 +128,7 @@ public class FileStream implements PhysicalOggStream {
    }
 
    private LogicalOggStream getLogicalStream(int serialNumber) {
-      return (LogicalOggStream)logicalStreams.get(new Integer(serialNumber));
+      return (LogicalOggStream)logicalStreams.get(Integer.valueOf(serialNumber));
    }
 
    public void setTime(long granulePosition) throws IOException {
