@@ -27,7 +27,7 @@ public class EntitySheepuff extends EntityAetherAnimal {
 
 	protected void entityInit() {
 		super.entityInit();
-		this.dataWatcher.addObject(16, new Byte((byte)0));
+		this.dataWatcher.addObject(16, Byte.valueOf((byte)0));
 	}
 
 	protected void dropFewItems() {
