@@ -25,7 +25,7 @@ public class EntitySheep extends EntityAnimal {
 
 	protected void entityInit() {
 		super.entityInit();
-		this.dataWatcher.addObject(16, new Byte((byte)0));
+		this.dataWatcher.addObject(16, Byte.valueOf((byte)0));
 	}
 
 	public boolean attackEntityFrom(Entity entity1, int i2) {
